<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              style="@style/padding_16"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_rec_white">
        <!--起始地目的地-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/margin_10">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/journey_list_start"/>
                <TextView
                    android:id="@+id/tv_journey_origin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical|center">
                <ImageView
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:background="@drawable/icon_right"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:gravity="end">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/journey_list_end"/>
                <TextView
                    android:id="@+id/tv_journey_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>

        <!--预计发车-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/margin_10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/font_regular"
                android:text="@string/journey_list_time"/>
            <TextView
                android:id="@+id/tv_journey_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/font_regular"
                android:layout_weight="3"/>
        </LinearLayout>

        <!--上车地点-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/margin_10">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/font_regular"
                android:text="@string/journey_list_place"/>
            <TextView
                android:id="@+id/tv_journey_place"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/font_regular"
                android:layout_weight="3"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_details"
            android:text="@string/journey_list_sign"
            style="@style/btn_checkBtn"/>
    </LinearLayout>
</LinearLayout>