<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--搜索框-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rec_white"
            android:padding="10dp"
            android:layout_margin="10dp">
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/search_placeholder"
                android:background="@null"
                android:textSize="14sp"
                android:layout_weight="5"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center">
                <Button
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/icon_search"/>
            </LinearLayout>
        </LinearLayout>
        <!--自由行图片-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical|center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text_vertical"/>
        </LinearLayout>
        <!--筛选卡片-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/shape_rec_white">
                <!--起始地目的地-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/journey_list_start"/>
                        <Spinner
                            android:id="@+id/sp_origin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:spinnerMode="dialog"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical|center">
                        <ImageView
                            android:layout_width="33dp"
                            android:layout_height="33dp"
                            android:background="@drawable/icon_right"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:gravity="end">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/journey_list_end"/>
                        <Spinner
                            android:id="@+id/sp_destination"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:spinnerMode="dialog"
                            android:textSize="20sp"/>
                    </LinearLayout>
                </LinearLayout>

                <!--时间选择-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/margin_10">
                    <TextView
                        android:id="@+id/tv_index_useDp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/font_regular"/>
                </LinearLayout>

                <!--学生票和老师票-->
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    style="@style/margin_10">
                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="学生票"/>
                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="教师票"/>
                </RadioGroup>
                <!--搜索按钮-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal">

                    <Button
                        style="@style/btn_checkBtn.margin_10"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:background="@drawable/btn_confirm_large"
                        android:text="搜索"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
        <!--公告标题-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/margin_10">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_line_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="公告"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <!--公告内容-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/margin_10">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:text="@string/index_notice"/>
        </LinearLayout>
        <!--行程标题-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/margin_10">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_line_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="行程"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <!--行程内容-->
        <ListView
            android:id="@+id/lv_index_journey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</ScrollView>